fix intro buttons spacing on mobile

--- a/styles/general-syles.css
+++ b/styles/general-syles.css
@@ -64,7 +64,7 @@ section{
 }
 button{
     height: 40px;
-    padding: 0 20px;
+    padding: 0 19px;
     margin: 24px 0px;
     border: none;
 }
